--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,12 @@
         <maven.compiler.target>14</maven.compiler.target>
     </properties>
     <name>Utility</name>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.9</version> 
+        </dependency>
+    </dependencies>
 </project>
